--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://secure-shelf-36287.herokuapp.com/"
 }
